# cellularAutomata

./: .gitignore  a.out  haskell-diagrams-cellular-automata.cabal  run-1d.sh  run-2d.sh  stack.yaml
app/: Cyclic2D.hs  Heat1D.hs  Main.hs
c/: Makefile  build.sh  generate.c  run.sh
src/: Cellular.hs
