name:                haskell-diagrams-cellular-automata
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-diagrams-cellular-automata#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, app
  exposed-modules:     Main
  ghc-options:         -threaded -O2 -dynamic -shared -fPIC
  extra-libraries:     HSrts-ghc8.10.7
  build-depends:       base >= 4.7 && < 5,
                       diagrams,
                       diagrams-core,
                       diagrams-lib,
                       diagrams-svg,
                       diagrams-contrib,
                       diagrams-cairo,
                       comonad,
                       active,
                       vector,
                       memoize,
                       vector-strategies,
                       parallel,
                       mono-traversable,
                       template-haskell,
                       diagrams-rasterific,
                       random,
                       colour
  other-modules:       BriansBrain,
                       Cellular,
                       Cyclic1D,
                       Cyclic2D,
                       DeriveMonoComonadTH,
                       GameOfLife,
                       Heat1D,
                       MaterialColors,
                       Rule,
                       Seeds

  default-language:    Haskell2010

test-suite haskell-diagrams-cellular-automata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-diagrams-cellular-automata
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-diagrams-cellular-automata
